# compPhys

./: .gitignore
hmwk/0/: 1.py  2.py  3.py  4.py  5.py
hmwk/1/: avoiding_lattice_walk.h  avoiding_random_walk.h  box_counting.h  callgrind.out.7418  expected_chain_value.cpp  expected_chain_value.h  fast_self_avoiding_walk.h  gaussian_walk.h  lattice_walk.h  makefile  point_hash.h  random_walk.h  regression.cpp  regression.h  test  test_walk.cpp
hmwk/1/problem_1/: .uniform_random.r.swp  uniform_random.r
hmwk/1/problem_234/: .RData  .Rhistory  CleanOut.txt  Fractal_dims.csv  avoiding_lattice_walk.h  diffusion_2D_avoiding_without_predict.csv  diffusion_2D_counting_predict.csv  diffusion_2D_gauss.csv  diffusion_2D_gauss_norm.csv  (+41 more)
hmwk/2/: .RData  .Rhistory  ising_model.cpp  ising_model.h  iter_2_4.csv  makefile  monte_carlo.cpp  monte_carlo.h  monte_carlo_object.h  output.txt  test_model.cpp  walk_2_10_1000000.csv  walk_2_20_1000000.csv  walk_2_40_1000000.csv  walk_2_4_200000.csv
hmwk/3/: CMakeLists.txt  makefile  test
hmwk/3/coordinate_manipulation/metric_space/: CMakeLists.txt
hmwk/3/coordinate_manipulation/metric_space/include/: bounded_euclidean_space.h  coordinate.h  coordinate_bounds.h  euclidean_space.h  flat_torus_space.h  metric_space.h  smooth_coordinate_space.h
hmwk/3/coordinate_manipulation/metric_space/src/: bounded_euclidean_space.cc  coordinate.cc  coordinate_bounds.cc  euclidean_space.cc  flat_torus_space.cc  smooth_coordinate_space.cc
hmwk/3/coordinate_manipulation/metric_space/tests/: CMakeLists.txt  bounded_euclidean_space_test.cc  coordinate_test.cc  euclidean_space_test.cc  flat_torus_space_test.cc  smooth_coordinate_space_test.cc
hmwk/3/coordinate_manipulation/nearest_neighbor/: CMakeLists.txt
hmwk/3/coordinate_manipulation/nearest_neighbor/include/: binned_coordinates.h  fixed_radius_nn.h  fr_nn_brute.h  fr_nn_cube.h  fr_nn_cubed_torus.h
hmwk/3/coordinate_manipulation/nearest_neighbor/src/: binned_coordinates.cc  fixed_radius_nn.cc  fr_nn_brute.cc  fr_nn_cube.cc  fr_nn_cubed_torus.cc
hmwk/3/coordinate_manipulation/nearest_neighbor/tests/: CMakeLists.txt  binned_coordinates_test.cc  fixed_radius_nn_test.cc  fixed_radius_nn_test.h  fr_nn_brute_test.cc  fr_nn_cube_test.cc  fr_nn_cubed_torus_test.cc
hmwk/3/lennard_jones_system/: CMakeLists.txt
hmwk/3/lennard_jones_system/include/: lennard_jones_potential.h
hmwk/3/lennard_jones_system/src/: lennard_jones_potential.cc  simulate_system.cc
hmwk/3/ode/: CMakeLists.txt
hmwk/3/ode/include/: integ_runge_kutta.h  integ_verlet.h  ode_interface.h  ode_solver.h
hmwk/3/ode/src/: integ_runge_kutta.cc  integ_verlet.cc  ode_interface.cc  ode_solver.cc
hmwk/3/ode/tests/: CMakeLists.txt  integ_runge_kutta_test.cc  integ_verlet_test.cc  ode_interface_test.cc  ode_interface_test.h  ode_solver_test.cc  ode_solver_test.h
hmwk/3/system_model/particle_system/: CMakeLists.txt
hmwk/3/system_model/particle_system/include/: classical_pairwise_particle_system.h  classical_particle_system.h  hamiltonian_particle_system.h  particle_system.h
hmwk/3/system_model/particle_system/particle/: CMakeLists.txt
hmwk/3/system_model/particle_system/particle_state/: CMakeLists.txt
hmwk/3/system_model/particle_system/particle_state/include/: hamiltonian_particle_state.h  particle_state.h
hmwk/3/system_model/particle_system/particle_state/src/: hamiltonian_particle_state.cc  particle_state.cc
hmwk/3/system_model/particle_system/particle_state/tests/: CMakeLists.txt
hmwk/3/system_model/particle_system/src/: classical_pairwise_particle_system.cc  classical_particle_system.cc  hamiltonian_particle_system.cc  particle_system.cc
hmwk/3/system_model/particle_system/system_energy/: CMakeLists.txt
hmwk/3/system_model/particle_system/system_energy/include/: classical_hamiltonian_energy.h  diagonal_hamiltonian_energy.h  hamiltonian_energy.h  system_energy.h
hmwk/3/system_model/particle_system/system_energy/potential_energy/: CMakeLists.txt
hmwk/3/system_model/particle_system/system_energy/potential_energy/include/: pairwise_potential_energy.h  pairwise_potential_function.h  potential_energy.h  pw_bounded_range.h  pw_brute.h  pw_lattice_grid.h
hmwk/3/system_model/particle_system/system_energy/potential_energy/src/: pairwise_potential_energy.cc  potential_energy.cc  pw_bounded_range.cc  pw_brute.cc  pw_lattice_grid.cc
hmwk/3/system_model/particle_system/system_energy/potential_energy/tests/: CMakeLists.txt
hmwk/3/system_model/particle_system/system_energy/src/: classical_hamiltonian_energy.cc  diagonal_hamiltonian_energy.cc  hamiltonian_energy.cc  system_energy.cc
hmwk/3/system_model/particle_system/system_energy/tests/: CMakeLists.txt
hmwk/3/system_model/particle_system/tests/: CMakeLists.txt  particle_system_test.cc
hmwk/3/system_model/system_update/: CMakeLists.txt
hmwk/3/system_model/system_update/basic_update/: CMakeLists.txt
hmwk/3/system_model/system_update/data_logging/: CMakeLists.txt
hmwk/3/system_model/system_update/data_logging/include/: data_logger.h  displacement_logger.h  energy_logger.h  position_logger.h  pressure_logger.h  r_squared_logger.h  speed_logger.h  state_logger.h  temperature_logger.h  velocity_logger.h
hmwk/3/system_model/system_update/data_logging/src/: data_logger.cc  displacement_logger.cc  energy_logger.cc  position_logger.cc  pressure_logger.cc  r_squared_logger.cc  speed_logger.cc  temperature_logger.cc  velocity_logger.cc
hmwk/3/system_model/system_update/dynamics_sim/: CMakeLists.txt
hmwk/3/system_model/system_update/include/: basic_update.h  dynamics_update.h  metropolis_dynamics_update.h  metropolis_npt.h  metropolis_nvt.h  metropolis_update.h  metropolis_uvt.h
hmwk/3/system_model/system_update/monte_carlo/: CMakeLists.txt
hmwk/3/system_model/system_update/monte_carlo_dynamics/: CMakeLists.txt
hmwk/3/system_model/system_update/src/: basic_update.cc  dynamics_update.cc  metropolis_npt.cc  metropolis_nvt.cc  metropolis_update.cc  metropolis_uvt.cc
hmwk/3/system_model/system_update/tests/: CMakeLists.txt
hmwk/4/: CMakeLists.txt
(+11 files in other folders)
